--- a/guitarcase.html
+++ b/guitarcase.html
@@ -38,10 +38,10 @@
             <nav class="collapse navbar-collapse bs-navbar-collapse" role="navigation">
                 <ul class="nav navbar-nav navbar-right" id="topnav">
                     <li>
-                        <a href="index.html#Philosophy">PHILOSOPHY</a>
+                        <a href="index.html#About">ABOUT</a>
                     </li>
                     <li>
-                        <a href="#Process">PROCESS</a>
+                        <a href="index.html#Process">PROCESS</a>
                     </li>
                     <li>
                         <a href="#Work">WORK</a>
@@ -58,19 +58,19 @@
         <![endif]-->
     
     <!-- Project Outline -->
-    <div class="outer-fit bg-blue" id="Philosophy">
+    <div class="outer-fit-black bg-blue" id="Philosophy">
         <div class="inner-fit-project philosophy-image top center">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-8 col-sm-8 col-md-offset-2 col-sm-offset-2 font-white left">
-                        <h1 class="headline">guitar case <span class="font-green">|</span> 2012</h1>
-                         <div class="outer-line-top">  
+                    <div class="col-md-7 col-sm-7 font-white left">
+                        <h1 class="headline">guitar case | 2012</h1>
+                        <div class="outer-line-top">  
                         </div>  
                             <div class="inner-line-dark">
                             </div>
-                        <div class="outer-line-bottom">  
-                        </div>   
-                        <h2 class="font-white">I designed this acoustic guitar case with All-State Industries for Gibson USA. I led the process from ideation through full-size final protoype formings. The design incorporates an innovative recessed handle and is currently on hold.</h2>
+                        <div class="outer-line-bottom"> 
+                        </div>
+                        <h4 class="font-white">I designed this guitar case with All-State Industries for Gibson USA as a viable new option to replace their current hardwood cases. This case features an innovative flush-mounted handle, and a removable accessories box with a lid that folds up to support the neck of the guitar in the case during maintenance.</h4>
                     </div>
                 </div>  
             </div>
@@ -78,21 +78,10 @@
     </div>
 
     <!-- Process -->
-    <div class="outer-fit bg-white" id="Process">
+    <div class="outer-fit-white bg-white" id="Process">
         <div class="inner-fit philosophy-image top center">
             <div class="container">
-                <div class="row padded-bottom-25">
-                    <div class="col-md-6 col-xs-12 font-green left">
-                        <h1 class="headline">process</h1>
-                        <div class="outer-line-top">  
-                        </div>  
-                            <div class="inner-line">
-                            </div>
-                        <div class="outer-line-bottom">  
-                        </div>  
-                    </div>
-                </div>
-                <div class="row padded-bottom-35">
+                <div class="row padded-bottom-35 left">
                     <div class="col-md-6 col-sm-6 col-xs-12">
                         <img class="img-responsive" src="img/guitarbrainstorm960x540.jpg">
                     </div>    
@@ -149,33 +138,27 @@
         </div>
     </div>
 
-<!-- Reflection -->
-    <div class="outer-fit bg-blue" id="Philosophy">
-        <div class="inner-fit-reflection philosophy-image top center">
+    <!-- Reflection -->
+    <div class="outer-fit-black bg-blue" id="Philosophy">
+        <div class="inner-fit-reflection philosophy-image middle">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-8 col-md-offset-2 col-sm-offset-2 col-sm-8 font-white left">
-                        <h2 class="font-white">The design of this guitar case was an incredible learning experience. I was given a great deal of responsibility and was able to produce a manufacturable product. The full-scale prototypes turned out great and were incredible to be a part of.</h2>
+                    <div class="col-md-12 font-white center" style="margin-bottom: -15px">
+                        <h2 class="font-white"><a href="shoes.html">GUITAR CASE | 2013</a></h2>
                     </div>
                 </div>  
             </div>
         </div>
-    </div>  
+    </div>
 
 <!-- Work -->
-    <div class="outer-fit bg-white" id="Work">
+    <div class="outer-fit-white bg-white" id="Work">
         <div class="inner-fit philosophy-image top center">
             <div class="container">
                 <div class="row padded-bottom-25">
                     <div class="col-md-6 font-green left">
-                        <h1>other work</h1>
-                        <div class="outer-line-top">  
-                        </div>  
-                            <div class="inner-line">
-                            </div>
-                        <div class="outer-line-bottom">  
-                        </div> 
-                        <span class="font-blue font-bold"><h2>A collection of recent projects from school and work.</h2></span>
+                        <h2 class="headline">other work</h2>
+                        <span class="font-blue font-bold"><h4>A collection of recent projects from school and work.</h4></span>
                     </div>
                 </div>
                 <div class="row padded-bottom-35">
@@ -194,10 +177,10 @@
                         <div class="pad-space">
                     </div> 
                 </div>   
-                <div class="row pa">
+                <div class="row padded-bottom-35">
                     <div class="col-md-12 text-right">
                         <a href="speaker.html"><img class="img-responsive" src="img/speakerpagehome.jpg"></a>
-                        <input type="button" value="bluetooth speaker | 2013" class="btn btn-blue-work" onclick="location.href='speaker.html';">
+                        <input type="button" value="speaker | 2013" class="btn btn-blue-work" onclick="location.href='speaker.html';">
                         </div>
                         <div class="pad-space">
                     </div>
@@ -209,29 +192,47 @@
                         </div>
                         <div class="pad-space">
                     </div>
-                </div>            
+                </div>
+                <div class="row padded-bottom-35">
+                    <div class="col-md-12 text-right">
+                        <a href="hospira.html"><img class="img-responsive" src="img/Hospira Home.jpg"></a>
+                        <input type="button" value="hospira inc. | 2013" class="btn btn-blue-work" onclick="location.href='hospira.html';">
+                        </div>
+                        <div class="pad-space">
+                    </div>
+                </div>  
+                <div class="row padded-bottom-35">
+                    <div class="col-md-12 text-right">
+                        <a href="pandg.html"><img class="img-responsive" src="img/pandghome.jpg"></a>
+                        <input type="button" value="procter &amp; gamble | 2013" class="btn btn-blue-work" onclick="location.href='pandg.html';">
+                        </div>
+                        <div class="pad-space">
+                    </div>
+                </div> 
+                <div class="row">
+                    <div class="col-md-12 text-right">
+                        <a href="samsung.html"><img class="img-responsive" src="img/samsunghome.jpg"></a>
+                        <input type="button" value="samsung | 2013" class="btn btn-blue-work" onclick="location.href='samsung.html';">
+                        </div>
+                        <div class="pad-space">
+                    </div>
+                </div>              
             </div>
         </div>
     </div>    
 
- <!-- Contact -->
-    <div class="outer-full-page bg-green" id="Contact">
+<!-- Contact -->
+    <div class="outer-full-page-contact bg-blue" id="Contact">
         <div class="inner-full-page middle center">
             <div class="container">
                 <div class="row padded-bottom">
-                    <div class="col-md-6 col-md-offset-3 font-white left">
-                        <h1 class="headline">contact</h1>
-                        <div class="outer-line-top">  
-                        </div>  
-                            <div class="inner-line-blue">
-                            </div>
-                        <div class="outer-line-bottom">  
-                        </div> 
-                        <span class="font-white"><h2>I love what I do. If you love any of it, feel free to send me an email or give me a call to learn more about me or any of my projects.</h2></span>
+                    <div class="col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2 font-white left">
+                        <h1 class="headline padded-bottom">contact</h1>
+                        <span class="font-white"><h4>I love what I do. If you love any of it, feel free to send me an email or give me a call to learn more about me or any of my projects.</h4></span>
                     </div>
                 </div>
             <div class="row">
-                <div class="col-md-6 col-md-offset-3">
+                <div class="col-md-6 col-sm-8 col-sm-offset-2 col-md-offset-3">
                 <form id="form1" name="form1" class="wufoo topLabel page" accept-charset="UTF-8" autocomplete="off" enctype="multipart/form-data" method="post" novalidate action="https://brandonkwilliams.wufoo.com/forms/zv5ugmr1asipbp/#public">
                 <ul>
                     <li id="foli211" class="notranslate namebox">
@@ -256,22 +257,23 @@
                             <textarea id="Field3" name="Field3" class="field textarea medium" spellcheck="true" rows="10" cols="50" tabindex="3" onkeyup="" placeholder="Message"></textarea>
                         </div>
                     </li> 
-                    <li class="buttons ">
+                    <li class="buttons">
                         <div>
                             <input id="saveForm" name="saveForm" class="btn btn-blue submit" type="submit" value="Submit"/>
                         </div>
                     </li>
                 </ul>
                 </form> 
-        </div> 
+                </div> 
+            </div>
                 <div class="row">
                     <div class="col-md-12">
-                        <h2><span class="font-blue">email. brandonwilliams.nu@gmail.com<br>phone. 574-305-1468</span></h2>
+                        <h4><span class="font-white">email. brandonwilliams.nu@gmail.com<br>phone. 574-305-1468</span></h4>
                     </div>
                 </div>
             </div>   
         </div>
-    </div>
+    </div>   
 
         <!-- Load JS here for greater good =============================-->
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
@@ -306,7 +308,7 @@
         <script>
         $(window).resize(function(){
         var windowHeight = $(window).height();
-        $('.outer-full-page').css({
+        $('.outer-full-page, .outer-full-page-contact').css({
             'height':windowHeight
         });
         }).resize();
