--- a/bootcamp.html
+++ b/bootcamp.html
@@ -41,10 +41,13 @@
                         <a href="index.html#Philosophy">PHILOSOPHY</a>
                     </li>
                     <li>
-                        <a href="#Process">PROCESS</a>
+                        <a href="index.html#Process">PROCESS</a>
                     </li>
                     <li>
                         <a href="#Work">WORK</a>
+                    </li>
+                    <li>
+                        <a href="index.html#Overview">OVERVIEW</a>
                     </li>
                     <li>
                         <a href="#Contact">CONTACT</a>
@@ -58,13 +61,13 @@
         <![endif]-->
     
     <!-- Project Outline -->
-    <div class="outer-fit bg-blue" id="Philosophy">
+    <div class="outer-fit-black bg-blue" id="Philosophy">
         <div class="inner-fit-project philosophy-image top center">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-8 col-md-offset-2 col-sm-8 col-sm-offset-2 font-white left">
-                        <h1 class="headline">clifford <span class="font-green">|</span> 2013</h1> 
-                        <h2 class="font-white">Clifford is an Arduino-controlled, guitar-playing machine. A three-week project based on the prompt "Kinetic Art" and a $100 budget. It was my first project completed for Northwestern University's Engineering Design Innovation Master's Program.</h2>
+                    <div class="col-md-7 col-sm-7 font-white left">
+                        <h1 class="headline">clifford | 2013</h1> 
+                        <h2 class="font-white">Clifford is an Arduino-controlled, guitar-playing machine. It was developed as part of a three-week project based solely on the prompt "Kinetic Art" and a $100 budget. It was the first project for Northwestern University's Engineering Design Innovation Master's Program.</h2>
                     </div>
                 </div>  
             </div>
@@ -72,18 +75,12 @@
     </div>
 
     <!-- Process -->
-    <div class="outer-fit bg-white" id="Process">
+    <div class="outer-fit-white bg-white" id="Process">
         <div class="inner-fit top center">
             <div class="container font-blue">
-                <div class="row padded-bottom-25">
+                 <div class="row padded-bottom-25">
                     <div class="col-md-6 col-xs-12 font-green left">
-                        <h1 class="headline">process</h1>
-                        <div class="outer-line-top">  
-                        </div>  
-                            <div class="inner-line">
-                            </div>
-                        <div class="outer-line-bottom">  
-                        </div>  
+                        <h1 class="headline" style="font-weight: 700">design</h1>
                     </div>
                 </div>
                 <div class="row padded-bottom-35">
@@ -124,7 +121,7 @@
                 <div class="row padded-bottom-35">
                     <div class="col-md-12 col-sm-12 col-xs-12">
                         <div class="video-container">
-                            <iframe src="http://player.vimeo.com/video/85860814?color=27AE60&portrait=0" width="500" height="281" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+                            <iframe src="http://player.vimeo.com/video/85860814?color=333333&portrait=0" width="500" height="281" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
                         </div>
                     </div>
                 </div>      
@@ -152,7 +149,7 @@
                 <div class="row">
                     <div class="col-md-12 col-sm-12 col-xs-12">
                         <div class="video-container">
-                            <iframe src="http://player.vimeo.com/video/85860812?color=27AE60&portrait=0" width="960" height="540" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+                            <iframe src="http://player.vimeo.com/video/85860812?color=333333&portrait=0" width="960" height="540" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
                         </div>
                     </div>
                 </div>             
@@ -161,32 +158,26 @@
     </div>
 
     <!-- Reflection -->
-    <div class="outer-fit bg-blue" id="Philosophy">
-        <div class="inner-fit-reflection philosophy-image top center">
+    <div class="outer-fit-black bg-blue" id="Philosophy">
+        <div class="inner-fit-reflection philosophy-image middle">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-6 col-md-offset-3 col-sm-offset-3 col-sm-6 font-white left">
-                        <h2 class="font-white">Clifford was a lot of fun to work on. I was able to build it out of mainly recycled materials. Almost all of the parts were leftovers from the studio. I originally planned on Clifford having the ability to play six chords, but ended with it only playing two. Clifford has since been retired.</h2>
+                    <div class="col-md-12 font-white center" style="margin-bottom: -15px">
+                        <h2 class="font-white"><a href="bootcamp.html">CLIFFORD | 2013</a></h2>
                     </div>
                 </div>  
             </div>
         </div>
-    </div>  
+    </div>
 
     <!-- Work -->
-    <div class="outer-fit bg-white" id="Work">
+    <div class="outer-fit-white bg-white" id="Work">
         <div class="inner-fit philosophy-image top center">
             <div class="container">
                 <div class="row padded-bottom-25">
                     <div class="col-md-6 font-green left">
-                        <h1 class="headline">other work</h1>
-                        <div class="outer-line-top">  
-                        </div>  
-                            <div class="inner-line">
-                            </div>
-                        <div class="outer-line-bottom">  
-                        </div> 
-                        <span class="font-blue"><h2>A collection of recent projects from school and work.</h2></span>
+                        <h1 class="headline" style="font-weight: 700">other work</h1>
+                        <span class="font-blue"><h4>A collection of recent projects from school and work.</h4></span>
                     </div>
                 </div>
                 <div class="row padded-bottom-35">
@@ -220,29 +211,47 @@
                         </div>
                         <div class="pad-space">
                     </div>
-                </div>          
+                </div>
+                <div class="row padded-bottom-35">
+                    <div class="col-md-12 text-right">
+                        <a href="hospira.html"><img class="img-responsive" src="img/Hospira Home.jpg"></a>
+                        <input type="button" value="hospira inc. | 2013" class="btn btn-blue-work" onclick="location.href='hospira.html';">
+                        </div>
+                        <div class="pad-space">
+                    </div>
+                </div>  
+                <div class="row padded-bottom-35">
+                    <div class="col-md-12 text-right">
+                        <a href="pandg.html"><img class="img-responsive" src="img/pandghome.jpg"></a>
+                        <input type="button" value="procter &amp; gamble | 2013" class="btn btn-blue-work" onclick="location.href='pandg.html';">
+                        </div>
+                        <div class="pad-space">
+                    </div>
+                </div> 
+                <div class="row">
+                    <div class="col-md-12 text-right">
+                        <a href="samsung.html"><img class="img-responsive" src="img/samsunghome.jpg"></a>
+                        <input type="button" value="samsung | 2013" class="btn btn-blue-work" onclick="location.href='samsung.html';">
+                        </div>
+                        <div class="pad-space">
+                    </div>
+                </div>            
             </div>
         </div>
     </div>
 
- <!-- Contact -->
-    <div class="outer-full-page bg-green" id="Contact">
+<!-- Contact -->
+    <div class="outer-full-page-contact bg-blue" id="Contact">
         <div class="inner-full-page middle center">
             <div class="container">
                 <div class="row padded-bottom">
-                    <div class="col-md-6 col-md-offset-3 font-white left">
-                        <h1 class="headline">contact</h1>
-                        <div class="outer-line-top">  
-                        </div>  
-                            <div class="inner-line-blue">
-                            </div>
-                        <div class="outer-line-bottom">  
-                        </div> 
-                        <span class="font-white"><h2>I love what I do. If you love any of it, feel free to send me an email or give me a call to learn more about me or any of my projects.</h2></span>
+                    <div class="col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2 font-white left">
+                        <h1 class="headline padded-bottom">contact</h1>
+                        <span class="font-white"><h4>I love what I do. If you love any of it, feel free to send me an email or give me a call to learn more about me or any of my projects.</h4></span>
                     </div>
                 </div>
             <div class="row">
-                <div class="col-md-6 col-md-offset-3">
+                <div class="col-md-6 col-sm-8 col-sm-offset-2 col-md-offset-3">
                 <form id="form1" name="form1" class="wufoo topLabel page" accept-charset="UTF-8" autocomplete="off" enctype="multipart/form-data" method="post" novalidate action="https://brandonkwilliams.wufoo.com/forms/zv5ugmr1asipbp/#public">
                 <ul>
                     <li id="foli211" class="notranslate namebox">
@@ -267,22 +276,23 @@
                             <textarea id="Field3" name="Field3" class="field textarea medium" spellcheck="true" rows="10" cols="50" tabindex="3" onkeyup="" placeholder="Message"></textarea>
                         </div>
                     </li> 
-                    <li class="buttons ">
+                    <li class="buttons">
                         <div>
                             <input id="saveForm" name="saveForm" class="btn btn-blue submit" type="submit" value="Submit"/>
                         </div>
                     </li>
                 </ul>
                 </form> 
-        </div> 
+                </div> 
+            </div>
                 <div class="row">
                     <div class="col-md-12">
-                        <h2><span class="font-blue">email. brandonwilliams.nu@gmail.com<br>phone. 574-305-1468</span></h2>
+                        <h4><span class="font-white">email. brandonwilliams.nu@gmail.com<br>phone. 574-305-1468</span></h4>
                     </div>
                 </div>
             </div>   
         </div>
-    </div>
+    </div>   
         <!-- Load JS here for greater good =============================-->
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.2.min.js"><\/script>')</script>
@@ -312,11 +322,11 @@
         <script src="js/jquery.stacktable.js"></script>
         <script src="http://vjs.zencdn.net/4.1/video.js"></script>
         <script src="js/application.js"></script>
-
+        
         <script>
         $(window).resize(function(){
         var windowHeight = $(window).height();
-        $('.outer-full-page').css({
+        $('.outer-full-page, .outer-full-page-contact').css({
             'height':windowHeight
         });
         }).resize();
