--- a/speaker.html
+++ b/speaker.html
@@ -38,10 +38,10 @@
             <nav class="collapse navbar-collapse bs-navbar-collapse" role="navigation">
                 <ul class="nav navbar-nav navbar-right" id="topnav">
                     <li>
-                        <a href="index.html#Philosophy">PHILOSOPHY</a>
+                        <a href="index.html#About">ABOUT</a>
                     </li>
                     <li>
-                        <a href="#Process">PROCESS</a>
+                        <a href="index.html#Process">PROCESS</a>
                     </li>
                     <li>
                         <a href="#Work">WORK</a>
@@ -58,39 +58,32 @@
         <![endif]-->
     
 <!-- Project Outline -->
-    <div class="outer-fit bg-blue" id="Philosophy">
+    <div class="outer-fit-black bg-blue" id="Philosophy">
         <div class="inner-fit-project philosophy-image top center">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-8 col-md-offset-2 col-sm-8 col-sm-ofset-2 font-white left">
-                        <h1 class="headline">speaker <span class="font-green">|</span> 2013</h1>
-                        <div class="outer-line-top">  
+                    <div class="col-md-7 col-sm-7 font-white left">
+                        <h1 class="headline">speaker | 2013</h1>
+                         <div class="outer-line-top">  
                         </div>  
                             <div class="inner-line-dark">
                             </div>
-                        <div class="outer-line-bottom">  
+                        <div class="outer-line-bottom"> 
                         </div>
-                        <h2 class="font-white">A wireless speaker I designed as part of the Introduction to Industrial Design Methods course at Northwestern. I wanted to design a bluetooth speaker with a simple, iconic profile made of high quality materials. Currently working on building a prototype.</h2>
-                        </div>
+                        <h4 class="font-white">This wireless speaker was designed as part of a course at Northwestern University. It features an iconic shape with high quality materials and finishes. I wanted to explore the possibilities of working with wood in ways not normally seen.</h4>
                     </div>
-                </div>  
-            </div>
+                </div>
+            </div>  
         </div>
     </div>
 
 <!-- Process -->
-    <div class="outer-fit bg-white" id="Process">
+    <div class="outer-fit-white bg-white" id="Process">
         <div class="inner-fit philosophy-image top center">
             <div class="container">
                 <div class="row padded-bottom-25">
                     <div class="col-md-6 col-xs-12 font-green left">
-                        <h1 class="headline">process</h1>
-                        <div class="outer-line-top">  
-                        </div>  
-                            <div class="inner-line">
-                            </div>
-                        <div class="outer-line-bottom">  
-                        </div>  
+                        <h1 class="headline" style="font-weight: 700">design</h1>
                     </div>
                 </div>
                 <div class="row padded-bottom-35">
@@ -142,33 +135,27 @@
         </div>
     </div>
 
-<!-- Reflection -->
-    <div class="outer-fit bg-blue">
-        <div class="inner-fit-reflection philosophy-image top center">
+    <!-- Reflection -->
+    <div class="outer-fit-black bg-blue" id="Philosophy">
+        <div class="inner-fit-reflection philosophy-image middle">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-8 col-md-offset-2 col-sm-8 col-sm-offset-2 font-white left">
-                        <h2 class="font-white">I am excited about the design that came out of this project. I am currently pursuing further development of the design and will update the project as things progress.</h2>
+                    <div class="col-md-12 font-white center" style="margin-bottom: -15px">
+                        <h2 class="font-white"><a href="shoes.html">SPEAKER | 2013</a></h2>
                     </div>
                 </div>  
             </div>
         </div>
-    </div>  
+    </div>
 
 <!-- Work -->
-    <div class="outer-fit bg-gray" id="Work">
+    <div class="outer-fit-gray bg-gray" id="Work">
         <div class="inner-fit philosophy-image top center">
             <div class="container">
                 <div class="row padded-bottom-35">
                     <div class="col-md-6 font-green left">
-                        <h1 class="headline">other work</h1>
-                        <div class="outer-line-top">  
-                        </div>  
-                            <div class="inner-line">
-                            </div>
-                        <div class="outer-line-bottom">  
-                        </div> 
-                        <span class="font-blue"><h2>A collection of recent projects from school and work.</h2></span>
+                        <h2 class="headline" style="font-weight: 700">other work</h2>
+                        <span class="font-blue font-bold"><h4>A collection of recent projects from school and work.</h4></span>
                     </div>
                 </div>
                 <div class="row padded-bottom-35">
@@ -195,36 +182,54 @@
                         <div class="pad-space">
                     </div>
                 </div>
-                <div class="row">
+                <div class="row padded-bottom-35">
                     <div class="col-md-12 text-right">
                         <a href="shoes.html"><img class="img-responsive" src="img/shoepagehome.jpg"></a>
                         <input type="button" value="shoes | 2013" class="btn btn-blue-work" onclick="location.href='shoes.html';">
                         </div>
                         <div class="pad-space">
                     </div>
-                </div>             
+                </div>
+                <div class="row padded-bottom-35">
+                    <div class="col-md-12 text-right">
+                        <a href="hospira.html"><img class="img-responsive" src="img/Hospira Home.jpg"></a>
+                        <input type="button" value="hospira inc. | 2013" class="btn btn-blue-work" onclick="location.href='hospira.html';">
+                        </div>
+                        <div class="pad-space">
+                    </div>
+                </div>  
+                <div class="row padded-bottom-35">
+                    <div class="col-md-12 text-right">
+                        <a href="pandg.html"><img class="img-responsive" src="img/pandghome.jpg"></a>
+                        <input type="button" value="procter &amp; gamble | 2013" class="btn btn-blue-work" onclick="location.href='pandg.html';">
+                        </div>
+                        <div class="pad-space">
+                    </div>
+                </div> 
+                <div class="row">
+                    <div class="col-md-12 text-right">
+                        <a href="samsung.html"><img class="img-responsive" src="img/samsunghome.jpg"></a>
+                        <input type="button" value="samsung | 2013" class="btn btn-blue-work" onclick="location.href='samsung.html';">
+                        </div>
+                        <div class="pad-space">
+                    </div>
+                </div>               
             </div>
         </div>
     </div>
 
  <!-- Contact -->
-    <div class="outer-full-page bg-green" id="Contact">
+    <div class="outer-full-page-contact bg-blue" id="Contact">
         <div class="inner-full-page middle center">
             <div class="container">
                 <div class="row padded-bottom">
-                    <div class="col-md-6 col-md-offset-3 font-white left">
-                        <h1 class="headline">contact</h1>
-                        <div class="outer-line-top">  
-                        </div>  
-                            <div class="inner-line-blue">
-                            </div>
-                        <div class="outer-line-bottom">  
-                        </div> 
-                        <span class="font-white"><h2>I love what I do. If you love any of it, feel free to send me an email or give me a call to learn more about me or any of my projects.</h2></span>
+                    <div class="col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2 font-white left">
+                        <h1 class="headline padded-bottom">contact</h1>
+                        <span class="font-white"><h4>I love what I do. If you love any of it, feel free to send me an email or give me a call to learn more about me or any of my projects.</h4></span>
                     </div>
                 </div>
             <div class="row">
-                <div class="col-md-6 col-md-offset-3">
+                <div class="col-md-6 col-sm-8 col-sm-offset-2 col-md-offset-3">
                 <form id="form1" name="form1" class="wufoo topLabel page" accept-charset="UTF-8" autocomplete="off" enctype="multipart/form-data" method="post" novalidate action="https://brandonkwilliams.wufoo.com/forms/zv5ugmr1asipbp/#public">
                 <ul>
                     <li id="foli211" class="notranslate namebox">
@@ -249,22 +254,23 @@
                             <textarea id="Field3" name="Field3" class="field textarea medium" spellcheck="true" rows="10" cols="50" tabindex="3" onkeyup="" placeholder="Message"></textarea>
                         </div>
                     </li> 
-                    <li class="buttons ">
+                    <li class="buttons">
                         <div>
                             <input id="saveForm" name="saveForm" class="btn btn-blue submit" type="submit" value="Submit"/>
                         </div>
                     </li>
                 </ul>
                 </form> 
-        </div> 
+                </div> 
+            </div>
                 <div class="row">
                     <div class="col-md-12">
-                        <h2><span class="font-blue">email. brandonwilliams.nu@gmail.com<br>phone. 574-305-1468</span></h2>
+                        <h4><span class="font-white">email. brandonwilliams.nu@gmail.com<br>phone. 574-305-1468</span></h4>
                     </div>
                 </div>
             </div>   
         </div>
-    </div>
+    </div>   
 
         <!-- Load JS here for greater good =============================-->
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
@@ -299,7 +305,7 @@
         <script>
         $(window).resize(function(){
         var windowHeight = $(window).height();
-        $('.outer-full-page').css({
+        $('.outer-full-page, .outer-full-page-contact').css({
             'height':windowHeight
         });
         }).resize();
