--- a/speaker.html
+++ b/speaker.html
@@ -11,7 +11,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-
+        <link href='http://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/main.css">
         <link rel="stylesheet" href="css/bootstrap.min.css">
@@ -70,7 +70,8 @@
                             </div>
                         <div class="outer-line-bottom"> 
                         </div>
-                        <h4 class="font-white">This wireless speaker was designed as part of a course at Northwestern University. It features an iconic shape with high quality materials and finishes. I wanted to explore the possibilities of working with wood in ways not normally seen.</h4>
+                        <h4 class="font-white">This wireless speaker was designed as part of a course at Northwestern University. It features an iconic shape with high quality materials and finishes. I wanted to explore the possibilities of using wood in shapes not normally seen.</h4>
+                        <h4>
                     </div>
                 </div>
             </div>  
