--- a/loungechair.html
+++ b/loungechair.html
@@ -11,7 +11,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-
+        <link href='http://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/main.css">
         <link rel="stylesheet" href="css/bootstrap.min.css">
@@ -70,7 +70,7 @@
                             </div>
                         <div class="outer-line-bottom"> 
                         </div>
-                        <h4 class="font-white">This lounge chair was designed as part of a course at Northwestern University. It features beautiful natural materials that will age gracefully. As the chair becomes well used and worn in, the materials will become more and more beautiful in their age. </h4>
+                        <h4 class="font-white">This lounge chair was designed as part of a course at Northwestern University. I wanted to design it using beautiful, natural materials that will age gracefully. As the chair becomes well used and worn in, the materials will become more and more beautiful. I was also interested in pushing the boundaries with unexpected wood forms. </h4>
                     </div>
                 </div>  
             </div>
