--- a/pandg.html
+++ b/pandg.html
@@ -9,9 +9,9 @@
     <title>Brandon K. Williams - Design Engineer</title>
     <meta name="description" content="Brandon Williams is an Engineer...">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
+    
         <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-
+        <link href='http://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/main.css">
         <link rel="stylesheet" href="css/bootstrap.min.css">
