--- a/loungechair.html
+++ b/loungechair.html
@@ -78,7 +78,7 @@
     </div>
 
     <!-- Process -->
-    <div class="outer-fit bg-white" id="Process">
+    <div class="outer-fit-white bg-white" id="Process">
         <div class="inner-fit philosophy-image top center">
             <div class="container">
                 <div class="row padded-bottom-25">
@@ -171,7 +171,7 @@
     </div> 
 
     <!-- Work -->
-    <div class="outer-fit bg-gray" id="Work">
+    <div class="outer-fit-gray bg-gray" id="Work">
         <div class="inner-fit philosophy-image top center">
             <div class="container">
                 <div class="row padded-bottom-25">
